[metadata]
name = paunch
summary = Utility to launch and manage containers using YAML based configuration data
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/paunch/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    paunch

[entry_points]
console_scripts =
    paunch = paunch.__main__:main

paunch =
    apply = paunch.cmd:Apply
    cleanup = paunch.cmd:Cleanup
    delete = paunch.cmd:Delete
    list = paunch.cmd:List
    debug = paunch.cmd:Debug

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = paunch/locale
domain = paunch

[update_catalog]
domain = paunch
output_dir = paunch/locale
input_file = paunch/locale/paunch.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = paunch/locale/paunch.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[wheel]
universal = 1
